--- a/demo/lit/jl-search-lit.html
+++ b/demo/lit/jl-search-lit.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="modulepreload" href="https://para.se/2024/x/lit.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/@lit/reactive-element/development/reactive-element.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/@lit/reactive-element/development/css-tag.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/lit-html/development/lit-html.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/lit-element/development/lit-element.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/lit-html/development/is-server.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/lit/directives/class-map.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/lit-html/development/directives/class-map.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/lit-html/development/directive.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/lit/directives/unsafe-html.mjs">
+<link rel="modulepreload" href="https://para.se/2024/x/lit-html/development/directives/unsafe-html.mjs">
+<link rel="modulepreload" href="../jl-search.mjs">
+<link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@0..1&display=block" as="style">
 
 <script type="module" src="./preload.mjs"></script>
 <script type="module">
@@ -17,6 +30,6 @@ jl-search-wiki {
 </style>
 
 <main>
-  <jl-search-wiki></jl-search-wiki>
+  <jl-search-wiki autocomplete></jl-search-wiki>
 </main>
 
