--- a/demo/encapsulated/jl-search-wiki.html
+++ b/demo/encapsulated/jl-search-wiki.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="modulepreload" href="../jl-search.mjs">
+<link rel="modulepreload" href="../../jl-search.mjs">
 
 
 <script type="module">
@@ -190,12 +190,12 @@
 
   <label for="autocomplete">Autocomplete</label>
   <div>
-    <input id="autocomplete" type="checkbox">
+    <input id="autocomplete" name="autocomplete" type="checkbox">
     <span>Suggests text completion inside input field</span>
   </div>
 
   <label for="field1">Search</label>
-  <jl-search id="field1"></jl-search>
+  <jl-search id="field1" name="field1"></jl-search>
 
   <!-- <label for="name">Name</label>
   <input id="name"> -->
