--- a/demo/plain/jl-search.html
+++ b/demo/plain/jl-search.html
@@ -116,7 +116,8 @@
 <!-- =====  Theme color slider  ===== -->
 
 <input id="hue" type="range" min="1" max="360" aria-label="Theme hue">
-<input id="chroma" type="range" min="0" max="0.47" step="0.01" aria-label="Theme chroma">
+<input id="chroma" type="range" min="0" max="0.47" step="0.01"
+       aria-label="Theme chroma">
 <script>
   const $hue = document.querySelector("#hue");
   const $chr = document.querySelector("#chroma");
@@ -374,7 +375,7 @@
     _presented = opt_id;
     // log("present", opt_id);
 
-    if( !opt_id?.length ) {
+    if (!opt_id?.length) {
       $art.hidden = true;
       // log("hide");
       return;
@@ -387,13 +388,13 @@
       : $art.animate([{ opacity: 1 }, { opacity: 0 }], 500);
 
     const rec = await get_rec(opt_id);
-    if( _presented !== opt_id ) return;
+    if (_presented !== opt_id) return;
     // log("Got", opt_id);
 
     // Start loading image while fadeout animates
     const $img = document.createElement("img");
     const img_loaded = new Promise((resolve, reject) => {
-      if( _presented !== opt_id ) return;
+      if (_presented !== opt_id) return;
       if (!rec.thumbnail) return resolve();
       $img.src = rec.thumbnail.source;
       $img.alt = "";
@@ -402,7 +403,7 @@
     });
 
     await fade_out.finished;
-    if( _presented !== opt_id ) return;
+    if (_presented !== opt_id) return;
     $art.style.opacity = 0;
 
     // log("present", opt_id, rec);
@@ -416,10 +417,10 @@
     $$("article > a").href = rec.content_urls.desktop.page;
 
     await img_loaded; // start fade in after image loaded
-    if( _presented !== opt_id ) return;
+    if (_presented !== opt_id) return;
     const fade_in = $art.animate([{ opacity: 0 }, { opacity: 1 }], 500);
     await fade_in.finished;
-    if( _presented !== opt_id ) return;
+    if (_presented !== opt_id) return;
     $art.style.opacity = 1;
     // log("present done");
   }
@@ -452,7 +453,7 @@
       const [page, search] = ev.destination.url.split("?");
       if (page !== base) return;
 
-      const opt_id = decodeURIComponent(search??"");
+      const opt_id = decodeURIComponent(search ?? "");
       log("Navigate", ev.navigationType, opt_id);
 
       ev.intercept({
@@ -461,7 +462,7 @@
     })
   }
 
-  function select( opt_id){
+  function select(opt_id) {
     $inp1.set_selected(opt_id);
     present(opt_id);
   }
@@ -469,7 +470,7 @@
   // First load selected option. After router is installed
   const search = new URL(document.location).search.slice(1);
   const opt_id = decodeURIComponent(search);
-  select( opt_id );
+  select(opt_id);
 
 </script>
 
@@ -543,14 +544,13 @@
     line-height: var(--line-height);
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: 30rem) {
     body {
       margin: 1rem;
     }
   }
 
   label[for] {
-    padding: var(--padding) 0;
     white-space: nowrap;
   }
 
@@ -561,14 +561,27 @@
   form {
     margin-top: 2rem;
     display: grid;
-    grid-template-columns: auto 1fr;
-    gap: var(--padding);
+    grid-template-columns: auto minmax(0, 1fr);
+    gap: 1.5em;
   }
 
   form>div {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    padding-left: var(--padding);
+    gap: var(--padding);
   }
+
+  @media (max-width: 20rem){
+    form{
+      grid-template-columns: auto;
+      gap: 0;
+    }
+    label{
+      margin-top: 1.5rem;
+    }
+  }
+
 
   article {
     view-transition-name: article;
@@ -655,8 +668,8 @@
     </main>
   </jl-search>
 
-  <label for="name">Name</label>
-  <input id="name" style="z-index:33">
+  <label for="other">Other</label>
+  <input id="other" style="z-index:2">
 
 </form>
 
